--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "@babel/core": "^7.9.6",
     "@babel/preset-env": "^7.9.6",
-    "babel-loader": "^8.1.0"
+    "babel-loader": "^8.1.0",
+    "eslint": "^7.0.0",
+    "eslint-loader": "^4.0.2"
   }
 }
