--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node src/server/index.js",
-    "build-dev": "webpack --config webpack.dev.js",
+    "build-dev": "webpack-dev-server --config webpack.dev.js --open",
     "build-prod": "webpack --config webpack.prod.js"
   },
   "keywords": [],
@@ -24,6 +24,7 @@
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "^7.0.0",
     "eslint-loader": "^4.0.2",
-    "html-webpack-plugin": "^4.3.0"
+    "html-webpack-plugin": "^4.3.0",
+    "webpack-dev-server": "^3.11.0"
   }
 }
